--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "audio_codecs/es8388_audio_codec.cc"
             "audio_codecs/cores3_audio_codec.cc"
             "audio_codecs/tcircles3_audio_codec.cc"
+            "audio_codecs/tcamerapluss3_audio_codec.cc"
             "led/single_led.cc"
             "led/circular_strip.cc"
             "display/display.cc"
@@ -92,6 +93,8 @@ elseif(CONFIG_BOARD_TYPE_TUDOUZI)
     set(BOARD_TYPE "tudouzi") 
 elseif(CONFIG_BOARD_TYPE_LILYGO_T_CIRCLE_S3)
     set(BOARD_TYPE "lilygo-t-circle-s3") 
+elseif(CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3)
+    set(BOARD_TYPE "lilygo-t-cameraplus-s3") 
 elseif(CONFIG_BOARD_TYPE_MOVECALL_MOJI_ESP32S3)
     set(BOARD_TYPE "movecall-moji-esp32s3") 
 elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3)
