enable camera functionality and call aliyun vision llm api for further chatting 1. apply your dashscope API key from https://bailian.console.aliyun.com/?apiKey=1 2. export the applied key to your local environment variable like     $env:DASHSCOPE_API_KEY="sk-xxx" or     export DASHSCOPE_API_KEY=sk-xxx 3. check your api key is successfully exported by     echo $env:DASHSCOPE_API_KEY or     echo $DASHSCOPE_API_KEY 4. idf.py menuconfig to tick on CONFIG_ESP_TLS_INSECURE and    CONFIG_ESP_TLS_SKIP_SERVER_CERT_VERIFY if they haven't been selected. 5. idf.py menuconfig to select esp_sparkbot board since the function is    only tested on this hardware 6. idf.py flash monitor to enjoy the demo

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,6 +11,9 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "display/no_display.cc"
             "display/lcd_display.cc"
             "display/ssd1306_display.cc"
+            "camera/camera.cc"
+            "camera/no_camera.cc"
+            "camera/my_camera.cc"
             "protocols/protocol.cc"
             "iot/thing.cc"
             "iot/thing_manager.cc"
@@ -22,7 +25,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "main.cc"
             )
 
-set(INCLUDE_DIRS "." "display" "audio_codecs" "protocols" "audio_processing")
+set(INCLUDE_DIRS "." "display" "audio_codecs" "protocols" "audio_processing" "camera")
 
 # 添加 IOT 相关文件
 file(GLOB IOT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/iot/things/*.cc)
@@ -32,6 +35,11 @@ list(APPEND SOURCES ${IOT_SOURCES})
 file(GLOB BOARD_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/common/*.cc)
 list(APPEND SOURCES ${BOARD_COMMON_SOURCES})
 list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/common)
+
+# Add utils source files
+file(GLOB UTILS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/utils/base64/*.c)
+list(APPEND SOURCES ${UTILS_SOURCES})
+list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/utils/base64/)
 
 # 根据 BOARD_TYPE 配置添加对应的板级文件
 if(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI)
@@ -116,6 +124,7 @@ file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.c
 )
 list(APPEND SOURCES ${BOARD_SOURCES})
+list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/)
 
 if(CONFIG_CONNECTION_TYPE_MQTT_UDP)
     list(APPEND SOURCES "protocols/mqtt_protocol.cc")
@@ -174,3 +183,5 @@ add_custom_command(
 add_custom_target(lang_header ALL
     DEPENDS ${LANG_HEADER}
 )
+
+add_definitions(-DDASHSCOPE_API_KEY=\"$ENV{DASHSCOPE_API_KEY}\")
