--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -93,8 +93,8 @@ elseif(CONFIG_BOARD_TYPE_LILYGO_T_CIRCLE_S3)
     set(BOARD_TYPE "lilygo-t-circle-s3") 
 elseif(CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3)
     set(BOARD_TYPE "lilygo-t-cameraplus-s3") 
-elseif(CONFIG_BOARD_TYPE_MOLUNSMARTHOME_S3)
-    set(BOARD_TYPE "molunsmarthome-s3") 
+elseif(CONFIG_BOARD_TYPE_MOLUNSMARTHOME_ESP32S3)
+    set(BOARD_TYPE "molunsmarthome-esp32s3") 
 elseif(CONFIG_BOARD_TYPE_MOVECALL_MOJI_ESP32S3)
     set(BOARD_TYPE "movecall-moji-esp32s3") 
 elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3)
