--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -39,8 +39,10 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ML307)
     set(BOARD_TYPE "bread-compact-ml307")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32)
     set(BOARD_TYPE "bread-compact-esp32")    
+elseif(CONFIG_BOARD_TYPE_DF_K10)
+    set(BOARD_TYPE "df-k10")
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_3)
-    set(BOARD_TYPE "esp-box-3")
+    set(BOARD_TYPE "esp-box-3")    
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
     set(BOARD_TYPE "kevin-box-1")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_2)
