--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -111,6 +111,14 @@ elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_WIFI)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-wifi")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_ML307)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-ml307")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_0_96OLED_ML307)
+    set(BOARD_TYPE "fancheng-0.96-4g")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_0_96OLED_WIFI)
+    set(BOARD_TYPE "fancheng-0.96-wifi")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_1_8LCD_ML307)
+    set(BOARD_TYPE "fancheng-1.8-4g")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_1_8LCD_WIFI)
+    set(BOARD_TYPE "fancheng-1.8-wifi") 
 endif()
 file(GLOB BOARD_SOURCES 
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
