--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,27 +1,28 @@
 ## IDF Component Manager Manifest File
 dependencies:
   waveshare/esp_lcd_sh8601:
-    version: "1.0.2"
+    version: 1.0.2
     public: true
   esp_lcd_touch_ft5x06:
-    version: "*"
+    version: '*'
     public: true
-  espressif/esp_lcd_ili9341: "==1.2.0"
-  espressif/esp_lcd_gc9a01: "^2.0.1"
-  78/esp_lcd_nv3023: "~1.0.0"
-  78/esp-wifi-connect: "~2.1.0"
-  78/esp-opus-encoder: "~2.1.0"
-  78/esp-ml307: "~1.7.1"
-  78/xiaozhi-fonts: "~1.3.2"
-  espressif/led_strip: "^2.4.1"
-  espressif/esp_codec_dev: "~1.3.2"
-  espressif/esp-sr: "^1.9.0"
-  espressif/button: "^3.3.1"
-  lvgl/lvgl: "~9.2.2"
-  esp_lvgl_port: "~2.4.4"
+  espressif/esp_lcd_ili9341: ==1.2.0
+  espressif/esp_lcd_gc9a01: ^2.0.1
+  78/esp_lcd_nv3023: ~1.0.0
+  78/esp-wifi-connect: ~2.1.0
+  78/esp-opus-encoder: ~2.1.0
+  78/esp-ml307: ~1.7.1
+  78/xiaozhi-fonts: ~1.3.2
+  espressif/led_strip: ^2.4.1
+  espressif/esp_codec_dev: ~1.3.2
+  espressif/esp-sr: ^1.9.0
+  espressif/button: ^3.3.1
+  lvgl/lvgl: ~9.2.2
+  esp_lvgl_port: ~2.4.4
   ## Required IDF version
   idf:
     version: '>=5.3'
 
   i2c_bus:
     public: true
+  maucke/mpu6050: ^1.0.4
