--- a/main/boards/tudouzi/config.json
+++ b/main/boards/tudouzi/config.json
@@ -3,7 +3,11 @@
     "builds": [
         {
             "name": "tudouzi",
-            "sdkconfig_append": ["CONFIG_USE_WAKE_WORD_DETECT=n"]
+            "sdkconfig_append": [
+                "CONFIG_USE_WAKE_WORD_DETECT=n",
+                "CONFIG_PM_ENABLE=y",
+                "CONFIG_FREERTOS_USE_TICKLESS_IDLE=y"
+            ]
         }
     ]
 }
