--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -6,6 +6,7 @@ dependencies:
   esp_lcd_touch_ft5x06:
     version: '*'
     public: true
+  maucke/mpu6050: ~1.0.1
   espressif/esp_lcd_ili9341: ==1.2.0
   espressif/esp_lcd_gc9a01: ^2.0.1
   78/esp_lcd_nv3023: ~1.0.0
@@ -25,4 +26,3 @@ dependencies:
 
   i2c_bus:
     public: true
-  maucke/mpu6050: ^1.0.2
