Add SenseCAP Watcher (#241)
* feat: add sensecap watcher board.

* feat(sensecap): Add button function.

* fix: fix compilation error.

* style:Modify code style.

* fix: fix wake bug

* fix: fix compilation error & Enable click to toggle state.

* style:  move sensecap_audio_codec files to sensecap board

* fix: Optimize shutdown.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -111,6 +111,8 @@ elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_WIFI)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-wifi")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_ML307)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-ml307")
+elseif(CONFIG_BOARD_TYPE_SENSECAP_WATCHER)
+    set(BOARD_TYPE "sensecap-watcher")
 endif()
 file(GLOB BOARD_SOURCES 
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
