增加 乐鑫科技的ESP32-S3-BOX 开发板

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -41,8 +41,8 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32)
     set(BOARD_TYPE "bread-compact-esp32")    
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_3)
     set(BOARD_TYPE "esp-box-3")
-elseif(CONFIG_BOARD_TYPE_ESP32_S3_BOX)
-    set(BOARD_TYPE "esp32-s3-box")
+elseif(CONFIG_BOARD_TYPE_ESP_BOX)
+    set(BOARD_TYPE "esp-box")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
     set(BOARD_TYPE "kevin-box-1")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_2)
