--- a/main/boards/esp-box/config.json
+++ b/main/boards/esp-box/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "esp32-s3-box",
+            "name": "esp-box",
             "sdkconfig_append": []
         }
     ]
