--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -115,6 +115,10 @@ elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_ML307)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-ml307")
 elseif(CONFIG_BOARD_TYPE_SENSECAP_WATCHER)
     set(BOARD_TYPE "sensecap-watcher")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_BOARD_ML307)
+    set(BOARD_TYPE "fancheng-ml307")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_BOARD_WIFI)
+    set(BOARD_TYPE "fancheng-wifi")
 endif()
 file(GLOB BOARD_SOURCES 
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
