--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "display/display.cc"
             "display/no_display.cc"
             "display/lcd_display.cc"
-            "display/ssd1306_display.cc"
+            "display/oled_display.cc"
             "protocols/protocol.cc"
             "iot/thing.cc"
             "iot/thing_manager.cc"
