updata the shell, move some lib to idf component

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ tools/WpfModuloTool/.vs/
 tools/WpfModuloTool/obj/
 main/assets/lang_config.h
 .DS_Store
+shell/Dual-screen-ai-display-cnc v2.f3d
+shell/Dual-screen-ai-display-cnc v2.png
