增加Kevin SP V4开发板,以代替不能OTA的SP V3

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -52,6 +52,8 @@ elseif(CONFIG_BOARD_TYPE_KEVIN_C3)
     set(BOARD_TYPE "kevin-c3")
 elseif(CONFIG_BOARD_TYPE_KEVIN_SP_V3_DEV)
     set(BOARD_TYPE "kevin-sp-v3-dev")
+elseif(CONFIG_BOARD_TYPE_KEVIN_SP_V4_DEV)
+    set(BOARD_TYPE "kevin-sp-v4-dev")
 elseif(CONFIG_BOARD_TYPE_KEVIN_YUYING_313LCD)
     set(BOARD_TYPE "kevin-yuying-313lcd")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
