只对esp-box-lite启用CONFIG_SOC_ADC_SUPPORTED

--- a/main/boards/esp-box-lite/config.json
+++ b/main/boards/esp-box-lite/config.json
@@ -3,7 +3,7 @@
     "builds": [
         {
             "name": "esp-box-lite",
-            "sdkconfig_append": []
+            "sdkconfig_append": ["CONFIG_SOC_ADC_SUPPORTED=y"]
         }
     ]
 }
