--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -11,7 +11,8 @@ dependencies:
   78/esp-wifi-connect: "~2.3.1"
   78/esp-opus-encoder: "~2.1.0"
   78/esp-ml307: "~1.7.2"
-  78/xiaozhi-fonts: "~1.3.2"
+  78/xiaozhi-fonts:
+    path: ../../xiaozhi-fonts
   espressif/led_strip: "^2.4.1"
   espressif/esp_codec_dev: "~1.3.2"
   espressif/esp-sr: "^1.9.0"
