--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -148,6 +148,8 @@ elseif(CONFIG_LANGUAGE_ZH_TW)
     set(LANG_DIR "zh-TW")
 elseif(CONFIG_LANGUAGE_EN_US)
     set(LANG_DIR "en-US")
+elseif(CONFIG_LANGUAGE_JA_JP)
+    set(LANG_DIR "ja-JP")
 endif()
 
 # 定义生成路径
