[iot] add a communication abstraction layer, IoT devices can reuse code related to communication.
This commit only adds SimpleComm and UART Comm.

Based on this framework, additional communication methods

such as esp-now will be implemented in the future.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -117,6 +117,14 @@ elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_ML307)
 elseif(CONFIG_BOARD_TYPE_SENSECAP_WATCHER)
     set(BOARD_TYPE "sensecap-watcher")
 endif()
+
+if(CONFIG_BOARD_TYPE_ESP_SPARKBOT)
+    file(GLOB BOARD_COMM_SOURCES
+        ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/communication/*.cc
+    )
+    list(APPEND SOURCES ${BOARD_COMM_SOURCES})
+endif()
+
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.c
