--- a/main/boards/df-k10/config.json
+++ b/main/boards/df-k10/config.json
@@ -2,9 +2,9 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "dfrobot-unihiker-k10",
+            "name": "df-k10",
             "sdkconfig_append": [
-                "CONFIG_SPIRAM_MODE_OCT=y","CONFIG_SPIRAM_MODE_QUAD=n"
+                "CONFIG_SPIRAM_MODE_OCT=y"
             ]
         }
     ]
