add board bread-compact-ml307-lcd

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -95,6 +95,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_46)
     set(BOARD_TYPE "esp32-s3-touch-lcd-1.46")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI_LCD)
     set(BOARD_TYPE "bread-compact-wifi-lcd")
+elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ML307_LCD)
+    set(BOARD_TYPE "bread-compact-ml307-lcd")    
 elseif(CONFIG_BOARD_TYPE_TUDOUZI)
     set(BOARD_TYPE "tudouzi")
 elseif(CONFIG_BOARD_TYPE_LILYGO_T_CIRCLE_S3)
