feat: add AtomS3R CAM/M12 + Echo Base

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -78,6 +78,8 @@ elseif(CONFIG_BOARD_TYPE_ATOMS3_ECHO_BASE)
     set(BOARD_TYPE "atoms3-echo-base")
 elseif(CONFIG_BOARD_TYPE_ATOMS3R_ECHO_BASE)
     set(BOARD_TYPE "atoms3r-echo-base")
+elseif(CONFIG_BOARD_TYPE_ATOMS3R_CAM_M12_ECHO_BASE)
+    set(BOARD_TYPE "atoms3r-cam-m12-echo-base")
 elseif(CONFIG_BOARD_TYPE_ATOMMATRIX_ECHO_BASE)
     set(BOARD_TYPE "atommatrix-echo-base")
 elseif(CONFIG_BOARD_TYPE_XMINI_C3)
