esp32C3+1302低成本开发板功能验证ok

--- a/main/boards/esp32c3-chenglong/config.json
+++ b/main/boards/esp32c3-chenglong/config.json
@@ -2,7 +2,7 @@
     "target": "esp32c3",
     "builds": [
         {
-            "name": "hezhi-l",
+            "name": "esp32c3-chenglong",
             "sdkconfig_append": []
         }
     ]
