--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -128,6 +128,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")  
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC_144)
     set(BOARD_TYPE "esp32-cgc-144")  
+elseif(CONFIG_BOARD_TYPE_ESP32S3_CGC_8080LCD)
+    set(BOARD_TYPE "esp32s3-cgc-8080lcd")  
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
