--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -114,6 +114,10 @@ elseif(CONFIG_BOARD_TYPE_DU_CHATX)
     set(BOARD_TYPE "du-chatx")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Taiji_Pi)
     set(BOARD_TYPE "taiji-pi-s3")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_0_85TFT_WIFI)
+    set(BOARD_TYPE "xingzhi-cube-0.85tft-wifi")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_0_85TFT_ML307)
+    set(BOARD_TYPE "xingzhi-cube-0.85tft-ml307")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_0_96OLED_WIFI)
     set(BOARD_TYPE "xingzhi-cube-0.96oled-wifi")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_0_96OLED_ML307)
