--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -137,7 +137,15 @@ elseif(CONFIG_BOARD_TYPE_FANCHENG_OLED_WIFI)
 elseif(CONFIG_BOARD_TYPE_FANCHENG_1_8LCD_ML307)
     set(BOARD_TYPE "fancheng-1.8-4g")
 elseif(CONFIG_BOARD_TYPE_FANCHENG_1_8LCD_WIFI)
-    set(BOARD_TYPE "fancheng-1.8-wifi")     
+    set(BOARD_TYPE "fancheng-1.8-wifi")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_OLED_ML307_M)    
+    set(BOARD_TYPE "fancheng-0.96-4g-m")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_OLED_WIFI_M)
+    set(BOARD_TYPE "fancheng-0.96-wifi-m")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_1_8LCD_ML307_M)
+    set(BOARD_TYPE "fancheng-1.8-4g-m")
+elseif(CONFIG_BOARD_TYPE_FANCHENG_1_8LCD_WIFI_M)
+    set(BOARD_TYPE "fancheng-1.8-wifi")           
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")  
 endif()
