--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -11,8 +11,9 @@ dependencies:
   78/esp-wifi-connect: "~2.3.1"
   78/esp-opus-encoder: "~2.1.0"
   78/esp-ml307: "~1.7.2"
-  darkautism/xiaozhi-fonts:
-    git: https://github.com/darkautism/xiaozhi-fonts.git
+  colemandlut/xiaozhi-fonts:
+    git: https://github.com/colemandlut/xiaozhi-fonts.git
+    version: "8cdec6ad4fa7dccea4fd2773116d548938b240aa"  # 更新为最新版本号或提交哈希
   espressif/led_strip: "^2.4.1"
   espressif/esp_codec_dev: "~1.3.2"
   espressif/esp-sr: "^2.0.2"
