Add new board type: Nulllab AI VOX

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -134,6 +134,8 @@ elseif(CONFIG_BOARD_TYPE_SENSECAP_WATCHER)
     set(BOARD_TYPE "sensecap-watcher")
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")  
+elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_VOX)
+    set(BOARD_TYPE "nulllab-ai-vox")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
