--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -107,7 +107,9 @@ elseif(CONFIG_BOARD_TYPE_LILYGO_T_CIRCLE_S3)
 elseif(CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3)
     set(BOARD_TYPE "lilygo-t-cameraplus-s3") 
 elseif(CONFIG_BOARD_TYPE_MOLUNSMARTHOME_ESP32S3)
-    set(BOARD_TYPE "molunsmarthome-esp32s3")     
+    set(BOARD_TYPE "molunsmarthome-esp32s3") 
+elseif(CONFIG_BOARD_TYPE_MOLUNSMARTHOME_ESP32)
+    set(BOARD_TYPE "molunsmarthome-esp32")         
 elseif(CONFIG_BOARD_TYPE_MOVECALL_MOJI_ESP32S3)
     set(BOARD_TYPE "movecall-moji-esp32s3")
 elseif(CONFIG_BOARD_TYPE_MOVECALL_CUICAN_ESP32S3)
