--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -147,6 +147,13 @@ file(GLOB BOARD_SOURCES
 )
 list(APPEND SOURCES ${BOARD_SOURCES})
 
+if(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85)
+file(GLOB BOARD_SOURCES_GIF
+${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/gif/*.c
+)
+list(APPEND SOURCES ${BOARD_SOURCES_GIF})
+endif()
+
 if(CONFIG_CONNECTION_TYPE_MQTT_UDP)
     list(APPEND SOURCES "protocols/mqtt_protocol.cc")
 elseif(CONFIG_CONNECTION_TYPE_WEBSOCKET)
