update compontent button to v4.1.2
1. 增加新板子Freenove media kit for esp32.
2. 将组件button版本升级到v4.1.2， 相关联的esp_lvgl_port组件需要升级到v2.5.0
3. 在main/CMakeLists.txt中获取Button组件的版本信息，用于Button类的条件编译，以兼容Button组件的V3.3.1版本。
4. 使用时，需要手动调整main/idf_component.yml中的组件版本，新老用户可以灵活切换Button的版本，建议模式使用V4.x.x

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,11 @@ add_compile_options(-Wno-missing-field-initializers)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(xiaozhi)
 
+# 项目根目录的 CMakeLists.txt
+set(PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+message(STATUS "项目根目录: ${PROJECT_ROOT_DIR}")
+
+
+# 添加 ESP-IDF 组件路径
+set(EXTRA_COMPONENT_DIRS ${CMAKE_SOURCE_DIR}/components)
+list(APPEND EXTRA_COMPONENT_DIRS ${CMAKE_SOURCE_DIR}/managed_components)
