--- a/main/boards/atk-dnesp32s3-box/config.json
+++ b/main/boards/atk-dnesp32s3-box/config.json
@@ -3,9 +3,7 @@
     "builds": [
         {
             "name": "atk-dnesp32s3-box",
-            "sdkconfig_append": [
-                "CONFIG_USE_WECHAT_MESSAGE_STYLE=y"
-            ]
+            "sdkconfig_append": []
         }
     ]
 }
