--- a/main/boards/esp32-s3-touch-amoled-1.8/config.json
+++ b/main/boards/esp32-s3-touch-amoled-1.8/config.json
@@ -3,9 +3,7 @@
     "builds": [
         {
             "name": "esp32-s3-touch-amoled-1.8",
-            "sdkconfig_append": [
-                "CONFIG_USE_WECHAT_MESSAGE_STYLE=y"
-            ]
+            "sdkconfig_append": []
         }
     ]
 }
