添加fantoy-wifi-13板； -修改引脚定义； -增加电源管理； -CheckVersion虾哥服务器+FanToy服务器。

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -48,6 +48,8 @@ elseif(CONFIG_BOARD_TYPE_ESP_BOX)
     set(BOARD_TYPE "esp-box")
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_LITE)
     set(BOARD_TYPE "esp-box-lite")
+elseif(CONFIG_BOARD_TYPE_FANTOY_WIFI_13)
+    set(BOARD_TYPE "fantoy-wifi-13")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
     set(BOARD_TYPE "kevin-box-1")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_2)
