--- a/main/boards/waveshare-esp32-s3-touch-lcd-1.46/config.json
+++ b/main/boards/waveshare-esp32-s3-touch-lcd-1.46/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "esp32-s3-touch-lcd-1.85",
+            "name": "waveshare-esp32-s3-touch-lcd-1.46",
             "sdkconfig_append": []
         }
     ]
