--- a/main/boards/waveshare-esp32-s3-touch-lcd-1.85c/config.json
+++ b/main/boards/waveshare-esp32-s3-touch-lcd-1.85c/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "esp32-s3-touch-lcd-1.85c",
+            "name": "waveshare-esp32-s3-touch-lcd-1.85c",
             "sdkconfig_append": []
         }
     ]
