--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -141,6 +141,14 @@ elseif(CONFIG_BOARD_TYPE_MIXGO_NOVA)
     set(BOARD_TYPE "mixgo-nova")
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")
+elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_0_96OLED_WIFI)
+    set(BOARD_TYPE "zhengchen-0.96oled-wifi")
+elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_0_96OLED_ML307)
+    set(BOARD_TYPE "zhengchen-0.96oled-ml307")
+elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_1_54TFT_WIFI)
+    set(BOARD_TYPE "zhengchen-1.54tft-wifi")
+elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_1_54TFT_ML307)
+    set(BOARD_TYPE "zhengchen-1.54tft-ml307")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
