--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -50,6 +50,8 @@ elseif(CONFIG_BOARD_TYPE_ESP_BOX_LITE)
     set(BOARD_TYPE "esp-box-lite")
 elseif(CONFIG_BOARD_TYPE_FANTOY_WIFI_13)
     set(BOARD_TYPE "fantoy-wifi-13")
+elseif(CONFIG_BOARD_TYPE_FANTOY_ML307_20)
+    set(BOARD_TYPE "fantoy-ml307-20")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
     set(BOARD_TYPE "kevin-box-1")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_2)
