--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -158,6 +158,13 @@ ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/gif/*.c
 list(APPEND SOURCES ${BOARD_SOURCES_GIF})
 endif()
 
+if(CONFIG_BOARD_TYPE_MOVECALL_CUICAN_ESP32S3)
+file(GLOB BOARD_SOURCES_GIF
+${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/gif/*.c
+)
+list(APPEND SOURCES ${BOARD_SOURCES_GIF})
+endif()
+
 if(CONFIG_CONNECTION_TYPE_MQTT_UDP)
     list(APPEND SOURCES "protocols/mqtt_protocol.cc")
 elseif(CONFIG_CONNECTION_TYPE_WEBSOCKET)
