自动化烧录带UI

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ dependencies.lock
 releases/
 main/assets/lang_config.h
 .DS_Store
+_internal/
+esp-idf-tools-setup-offline-5.3.2.exe
+Git-2.49.0-64-bit.exe
+shaolu_log.txt
