修改otto-robot目录与文件风格与主仓库一致
1.修改otto-robot目录与文件风格与主仓库一致
2删除otto任务超时机制，任务结束自动删除，修复突然“瘫痪”bug

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -144,7 +144,7 @@ elseif(CONFIG_BOARD_TYPE_MIXGO_NOVA)
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")  
 elseif(CONFIG_BOARD_TYPE_OTTO_ROBOT)
-    set(BOARD_TYPE "ottoRobot")
+    set(BOARD_TYPE "otto-robot")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
