添加乐鑫开发板esp32-s3-lcd-ev-board支持 (#543)
* 添加乐鑫开发版esp32-s3-lcd-ev-board支持

* 新增乐鑫开发版esp32-s3-lcd-ev-board支持

* 新增乐鑫开发板esp32-s3-lcd-ev-board支持，修复led和背光bug

* Delete main/boards/ESP32-S3-LCD-EV-Board directory

* 新增乐鑫开发板esp32-s3-lcd-ev-board支持，修复led和背光bug

* 去除冗余代码

* 添加esp-s3-lcd-ev-board的硬件版本选择配置

* Delete main/boards/esp-s3-lcd-ev-board-1.4 directory

* 添加esp-s3-lcd-ev-board的硬件版本选择配置

* 新增不同版本的名称标识，使ota更新时能识别

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -153,6 +153,8 @@ elseif(CONFIG_BOARD_TYPE_MIXGO_NOVA)
     set(BOARD_TYPE "mixgo-nova")
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")
+elseif(CONFIG_BOARD_TYPE_ESP_S3_LCD_EV_Board)
+    set(BOARD_TYPE "esp-s3-lcd-ev-board")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
