--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,7 +15,7 @@ dependencies:
   78/xiaozhi-fonts: "~1.3.2"
   espressif/led_strip: "^2.4.1"
   espressif/esp_codec_dev: "~1.3.2"
-  espressif/esp-sr: "^2.0.5"
+  espressif/esp-sr: "==2.0.3"
   espressif/button: "^3.3.1"
   espressif/knob: "^1.0.0"
   espressif/esp_lcd_touch_ft5x06: "~1.0.6"
