--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -155,6 +155,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")
 elseif(CONFIG_BOARD_TYPE_ESP_S3_LCD_EV_Board)
     set(BOARD_TYPE "esp-s3-lcd-ev-board")
+elseif(CONFIG_BOARD_TYPE_COOLKIT_XZ_01)
+    set(BOARD_TYPE "coolkit-xz-01")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
