Adjust to naming requirements

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -94,17 +94,17 @@ elseif(CONFIG_BOARD_TYPE_ESP_SPARKBOT)
 elseif(CONFIG_BOARD_TYPE_ESP_SPOT_S3)
     set(BOARD_TYPE "esp-spot-s3")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
-    set(BOARD_TYPE "waveshare-esp32-s3-touch-amoled-1.8")
+    set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85C)
-    set(BOARD_TYPE "waveshare-esp32-s3-touch-lcd-1.85c")
+    set(BOARD_TYPE "esp32-s3-touch-lcd-1.85c")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85)
-    set(BOARD_TYPE "waveshare-esp32-s3-touch-lcd-1.85")
+    set(BOARD_TYPE "esp32-s3-touch-lcd-1.85")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_46)
-    set(BOARD_TYPE "waveshare-esp32-s3-touch-lcd-1.46")
+    set(BOARD_TYPE "esp32-s3-touch-lcd-1.46")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_3_5)
-    set(BOARD_TYPE "waveshare-esp32-s3-touch-lcd-3.5")
+    set(BOARD_TYPE "esp32-s3-touch-lcd-3.5")
 elseif(CONFIG_BOARD_TYPE_ESP32P4_NANO)
-    set(BOARD_TYPE "waveshare-esp32-p4-nano")
+    set(BOARD_TYPE "waveshare-p4-nano")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI_LCD)
     set(BOARD_TYPE "bread-compact-wifi-lcd")
 elseif(CONFIG_BOARD_TYPE_TUDOUZI)
