--- a/main/boards/esp32-s3-touch-amoled-1.8/config.json
+++ b/main/boards/esp32-s3-touch-amoled-1.8/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "waveshare-esp32-s3-touch-amoled-1.8",
+            "name": "esp32-s3-touch-amoled-1.8",
             "sdkconfig_append": [
                 "CONFIG_USE_WECHAT_MESSAGE_STYLE=y"
             ]
