--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -26,6 +26,15 @@ dependencies:
     version: "^1.0.0"
     rules:
       - if: 'idf_version >= "5.4.0"'
+
+  waveshare/esp_lcd_jd9365_10_1:
+    version: "*"
+    rules:
+      - if: "target in [esp32p4]"
+  espressif/esp_wifi_remote:
+    version: "*"
+    rules:
+      - if: "target in [esp32p4]"
   ## Required IDF version
   idf:
     version: ">=5.3"
