--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -19,6 +19,7 @@ dependencies:
   espressif/button: "~4.1.3"
   espressif/knob: "^1.0.0"
   espressif/esp_lcd_touch_ft5x06: "~1.0.7"
+  espressif/esp_lcd_touch_gt911: "^1"
   lvgl/lvgl: "~9.2.2"
   esp_lvgl_port: "~2.6.0"
   espressif/esp_io_expander_tca95xx_16bit: "^2.0.0"
