使温湿度数据可变

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -25,6 +25,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "esphomeai/eez_ui/ui/screens.c"
             "esphomeai/eez_ui/ui/images.c"
             "esphomeai/eez_ui/ui/styles.c"
+            "esphomeai/eez_ui/ui/vars.c"
             "esphomeai/eez_ui/ui/ui_image_fan32.c"
             "esphomeai/eez_ui/ui/ui_image_humidity32.c"
             "esphomeai/eez_ui/ui/ui_image_light32.c"
