增加HA模块，并从HA获取温湿度数据到面板

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "esphomeai/eez_ui/ui/ui_image_setting48.c"
             "esphomeai/eez_ui/ui/ui_image_thermostat32.c"
             "esphomeai/eez_ui/ui/ui_image_tv32.c"
+            "esphomeai/ha/ha.cc"
             "esphomeai/esphomeai.cc"
             )
 
