Add board support for Waveshare ESP32-S3-Touch-AMOLED-1.75

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -97,6 +97,8 @@ elseif(CONFIG_BOARD_TYPE_ESP_SPOT_S3)
     set(BOARD_TYPE "esp-spot-s3")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_75)
+    set(BOARD_TYPE "waveshare-s3-touch-amoled-1.75")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85C)
     set(BOARD_TYPE "esp32-s3-touch-lcd-1.85c")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85)
