--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -157,6 +157,8 @@ elseif(CONFIG_BOARD_TYPE_DOIT_S3_AIBOX)
     set(BOARD_TYPE "doit-s3-aibox")
 elseif(CONFIG_BOARD_TYPE_MIXGO_NOVA)
     set(BOARD_TYPE "mixgo-nova")
+elseif(CONFIG_BOARD_TYPE_GENJUTECH_S3_1_54TFT)
+    set(BOARD_TYPE "genjutech-s3-1.54tft")
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")
 elseif(CONFIG_BOARD_TYPE_ESP_S3_LCD_EV_Board)
