为AI-Vox添加实时打算功能

--- a/main/boards/nulllab-ai-vox-emoji/config.json
+++ b/main/boards/nulllab-ai-vox-emoji/config.json
@@ -4,7 +4,8 @@
     {
       "name": "nulllab-ai-vox-emoji",
       "sdkconfig_append": [
-        "CONFIG_CUSTOM_SSID_PREFIX=\"AI-VOX\""
+        "CONFIG_CUSTOM_SSID_PREFIX=\"AI-VOX\"",
+        "CONFIG_USE_DEVICE_AEC=y"
       ]
     }
   ]
