--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -171,6 +171,8 @@ elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_1_54TFT_ML307)
     set(BOARD_TYPE "zhengchen-1.54tft-ml307")
 elseif(CONFIG_BOARD_TYPE_ESP32_S3_1_54_MUMA)
     set(BOARD_TYPE "sp-esp32-s3-1.54-muma")
+elseif(CONFIG_BOARD_TYPE_XIAOZHI_TFT_AICHATBOX_WIFI)
+    set(BOARD_TYPE "xiaozhi-tft-aichatbox-wifi")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
