--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "protocols/websocket_protocol.cc"
             "iot/thing.cc"
             "iot/thing_manager.cc"
+            "mcp_server.cc"
             "system_info.cc"
             "application.cc"
             "ota.cc"
