--- a/main/boards/fantoy-ml307-20/config.json
+++ b/main/boards/fantoy-ml307-20/config.json
@@ -3,7 +3,9 @@
     "builds": [
         {
             "name": "fantoy-ml307-20",
-            "sdkconfig_append": []
+            "sdkconfig_append": [
+                "CONFIG_USE_GIF_EMOTION_STYLE=y"
+            ]
         }
     ]
 }
