--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -116,7 +116,9 @@ elseif(CONFIG_BOARD_TYPE_TUDOUZI)
     set(BOARD_TYPE "tudouzi")
 elseif(CONFIG_BOARD_TYPE_LILYGO_T_CIRCLE_S3)
     set(BOARD_TYPE "lilygo-t-circle-s3")
-elseif(CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3)
+elseif(CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3_V1_0_V1_1)
+    set(BOARD_TYPE "lilygo-t-cameraplus-s3")
+elseif(CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3_V1_2)
     set(BOARD_TYPE "lilygo-t-cameraplus-s3")
 elseif(CONFIG_BOARD_TYPE_LILYGO_T_DISPLAY_S3_PRO_MVSRLORA)
     set(BOARD_TYPE "lilygo-t-display-s3-pro-mvsrlora")
