--- a/main/boards/df-s3-ai-cam/config.json
+++ b/main/boards/df-s3-ai-cam/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "dfrobot-esp32-s3-ai-cam",
+            "name": "df-s3-ai-cam",
             "sdkconfig_append": [
                 "CONFIG_ESP_PHY_MAX_WIFI_TX_POWER=10",
                 "CONFIG_ESP_PHY_MAX_TX_POWER=10",
