增加DFRobot ESP32-S3 AI智能摄像头模块，适配视觉识别功能 (#692)
* 增加 DFRobot ESP32-S3 AI智能摄像头模块

* 适配视觉识别功能

* 修改dfrobot-esp32-s3-ai-cam为df-s3-ai-cam

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -46,6 +46,8 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32_LCD)
     set(BOARD_TYPE "bread-compact-esp32-lcd")
 elseif(CONFIG_BOARD_TYPE_DF_K10)
     set(BOARD_TYPE "df-k10")
+elseif(CONFIG_BOARD_TYPE_DF_S3_AI_CAM)
+    set(BOARD_TYPE "df-s3-ai-cam")
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_3)
     set(BOARD_TYPE "esp-box-3")
 elseif(CONFIG_BOARD_TYPE_ESP_BOX)
