--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -96,6 +96,8 @@ elseif(CONFIG_BOARD_TYPE_ESP_SPARKBOT)
     set(BOARD_TYPE "esp-sparkbot")
 elseif(CONFIG_BOARD_TYPE_ESP_SPOT_S3)
     set(BOARD_TYPE "esp-spot-s3")
+elseif(CONFIG_BOARD_TYPE_ESP32_S3_TOTO_MB)
+    set(BOARD_TYPE "esp32-s3-toto-mb")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_75)
