增加sp-esp32-s3-1.28-box开发板

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -180,6 +180,8 @@ elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_1_54TFT_ML307)
     set(BOARD_TYPE "zhengchen-1.54tft-ml307")
 elseif(CONFIG_BOARD_TYPE_ESP32_S3_1_54_MUMA)
     set(BOARD_TYPE "sp-esp32-s3-1.54-muma")
+elseif(CONFIG_BOARD_TYPE_ESP32_S3_1_28_BOX)
+    set(BOARD_TYPE "sp-esp32-s3-1.28-box")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
