--- a/main/boards/lilygo-t-cameraplus-s3/config.json
+++ b/main/boards/lilygo-t-cameraplus-s3/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "lilygo-t-cameraplus-s3_v1_0_v1_1",
+            "name": "lilygo-t-cameraplus-s3",
             "sdkconfig_append": [
                 "CONFIG_SPIRAM_MODE_QUAD=y",
                 "CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3_V1_0_V1_1=y"
