refactor(main): 重构矩阵显示屏相关代码
- 移除 MatrixScreen 类和 LedDisplay 类
- 新增 MatrixDisplay 类，继承自 Display 接口
- 在 Esp32S3TotoMbBoard 中初始化和使用 MatrixDisplay
- 删除与 MatrixScreen 相关的配置和代码

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "led/gpio_led.cc"
             "display/display.cc"
             "display/lcd_display.cc"
+            "display/matrix_display.cc"
             "display/oled_display.cc"
             "protocols/protocol.cc"
             "protocols/mqtt_protocol.cc"
