--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -57,6 +57,14 @@ dependencies:
     version: '^0.1'
     rules:
     - if: target in [esp32c3]
+  
+  sscma_client:
+    git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
+    path: components/sscma_client
+  
+  esp_jpeg_simd:
+    git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
+    path: components/esp_jpeg_simd
 
   ## Required IDF version
   idf:
