feat: 初步增加了硬件及引脚配置

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -193,6 +193,8 @@ elseif(CONFIG_BOARD_TYPE_OTTO_ROBOT)
     set(BOARD_TYPE "otto-robot")
 elseif(CONFIG_BOARD_TYPE_ELECTRON_BOT)
     set(BOARD_TYPE "electron-bot")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUS3_V1)
+    set(BOARD_TYPE "fogseek-aus3-v1")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI_CAM)
     set(BOARD_TYPE "bread-compact-wifi-s3cam")
 endif()
