--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -68,6 +68,8 @@ elseif(CONFIG_BOARD_TYPE_KEVIN_YUYING_313LCD)
     set(BOARD_TYPE "kevin-yuying-313lcd")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
     set(BOARD_TYPE "lichuang-dev")
+elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV_DUAL)
+    set(BOARD_TYPE "lichuang-dev-dual")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_C3_DEV)
     set(BOARD_TYPE "lichuang-c3-dev")
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_2P4)
